--- a/Lab1/package.json
+++ b/Lab1/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "antd": "^5.10.2",
     "chart.js": "^4.4.0",
     "flowbite": "^1.8.1",
     "flowbite-react": "^0.6.1",
